--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,5 +15,6 @@ crate-type = ["cdylib", "staticlib"]
 anyhow = "1.0.66"
 bao = {git = "https://github.com/redsolver/bao", branch = "chunk_groups"}
 blake3 = {git = "https://github.com/BLAKE3-team/BLAKE3", branch = "more_guts"}
+chacha20poly1305 = "0.10.1"
 error-chain = "0.12.4"
 flutter_rust_bridge = "1"
