--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: s5_server
 description: proof of concept implementation of a new storage network
 publish_to: none
-version: 0.7.2
+version: 0.8.0
 
 environment:
   sdk: ">=2.18.2 <3.0.0"
@@ -31,6 +31,7 @@ dependencies:
   sqflite_common_ffi: ^2.2.0+1
   ffi: ^2.0.1
   flutter_rust_bridge: ^1.62.0
+  cancellation_token: ^1.5.0
   # ! disabled because the arweave-dart library is licensed GPL-2.0 and this repo is MIT
   # arweave:
   #   git: https://github.com/ardriveapp/arweave-dart.git
