--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,9 +12,8 @@ flutter_rust_bridge_codegen = {version = "1", features = []}
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+abao = { git = "https://github.com/n0-computer/abao", features = ["group_size_256k"], default_features = false }
 anyhow = "1.0.66"
-bao = {git = "https://github.com/redsolver/bao", branch = "chunk_groups"}
-blake3 = {git = "https://github.com/BLAKE3-team/BLAKE3", branch = "more_guts"}
+blake3 = "1.3.3"
 chacha20poly1305 = "0.10.1"
-error-chain = "0.12.4"
 flutter_rust_bridge = "1"
