--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -4,7 +4,8 @@ on:
   release:
 
 env:
-  APP_VERSION: 0.10.0
+  APP_VERSION: ${{ github.event.release.tag_name.replace('v', '') }}
+
 
 jobs:
   docker:
