update to run (but not push) build on push

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -40,3 +40,10 @@ jobs:
             --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest \
             --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
             .
+
+      - name: Test Build
+        if: github.event_name != 'release'
+        run: |
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            .
