update env app version

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -8,7 +8,7 @@ on:
     types: [created]
 
 env:
-  APP_VERSION: ${{ github.event.release.tag_name.replace('v', '') }}
+  APP_VERSION: "${{ github.event.release.tag_name.replace('v', '') }}"
   DEVELOPER_HANDLE: ${{ github.repository_owner }}
 
 jobs:
