--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker buildx build \
             --push \
-            --platform linux/amd64,linux/arm/v7,linux/arm64/v8, \
+            --platform linux/amd64,linux/arm64/v8, \
             --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest \
             --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
             .
@@ -45,6 +45,5 @@ jobs:
         if: github.event_name != 'release'
         run: |
           docker buildx build \
-            # --platform linux/amd64,linux/arm/v7,linux/arm64/v8 \
             --platform linux/amd64,linux/arm64/v8 \
             .
