--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,11 +1,11 @@
 name: Docker Build and Push
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
+  # release:
+  #   types: [created]
 
 env:
   APP_VERSION: ${{ github.event.release.tag_name }}
@@ -20,10 +20,10 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -46,12 +46,44 @@ jobs:
         run: |
           docker buildx build \
             --push \
-            --platform linux/amd64,linux/arm/v7,linux/arm64/v8 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
+            --platform linux/amd64 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
             .
 
-      # # Saving this in case we ever want to start doing builds on every commit
+          docker buildx build \
+            --push \
+            --platform linux/arm/v7 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm-v7-${{ env.APP_VERSION }} \
+            .
+
+          docker buildx build \
+            --push \
+            --platform linux/arm64/v8 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} \
+            .
+
+      - name: Create and push manifests
+        # if: github.event_name == 'release'
+        run: |
+          # Export experimental CLI environment variable
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+
+          # Create and push manifest for amd64 platform
+          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }}
+          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
+
+          # Create and push manifest for arm-v7 platform
+          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm-v7-${{ env.APP_VERSION }} --amend
+          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
+
+          # Create and push manifest for arm64-v8 platform
+          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} --amend
+          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
+
+      # # Saving this in case we ever want to start
       # - name: Test Build
       #   # if: github.event_name != 'release'
       #   run: |
