--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -10,9 +10,35 @@ on:
 env:
   APP_VERSION: ${{ github.event.release.tag_name }}
   DEVELOPER_HANDLE: ${{ github.repository_owner }}
+  LOCAL_BUILD: false
 
 jobs:
-  docker:
+  build-and-push-amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ env.DEVELOPER_HANDLE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push for amd64 platform
+        run: |
+          docker buildx build \
+            --push \
+            --platform linux/amd64 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
+            .
+
+  build-and-push-armv7:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -20,11 +46,12 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
+      
       - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -41,54 +68,38 @@ jobs:
           sudo mount -t tmpfs -o size=10G none /var/lib/docker
           sudo systemctl restart docker
 
-      - name: Build and push
-        # if: github.event_name == 'release'
+      - name: Build and push for armv7 platform
         run: |
           docker buildx build \
             --push \
-            --platform linux/amd64 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
-            .
-
-          docker buildx build \
-            --push \
             --platform linux/arm/v7 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm-v7-${{ env.APP_VERSION }} \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:armv7-${{ env.APP_VERSION }} \
             .
 
+  build-and-push-arm64v8:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ env.DEVELOPER_HANDLE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push for arm64v8 platform
+        run: |
           docker buildx build \
             --push \
             --platform linux/arm64/v8 \
             --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} \
             .
-
-      - name: Create and push manifests
-        # if: github.event_name == 'release'
-        # name: Create and push manifests
-        run: |
-          # Export experimental CLI environment variable
-          export DOCKER_CLI_EXPERIMENTAL=enabled
-
-          # Create and push manifest for amd64 platform
-          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }}
-          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
-
-          # Create and push manifest for arm-v7 platform
-          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5-arm-v7-${{ env.APP_VERSION }} --amend
-          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
-
-          # Create and push manifest for arm64-v8 platform
-          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5-arm64-v8-${{ env.APP_VERSION }} --amend
-          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
-
-
-      # # Saving this in case we ever want to start
-      # - name: Test Build
-      #   # if: github.event_name != 'release'
-      #   run: |
-      #     docker buildx build \
-      #       --platform linux/amd64,linux/arm/v7,linux/arm64/v8 \
-      #       .
