--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,41 +1,44 @@
 name: Docker Build and Push
 
 on:
+  # push:
+  #   branches:
+  #     - main
   release:
     types: [created]
 
 env:
-  APP_VERSION: ${{ github.event.release.tag_name }}
+  APP_VERSION: ${{ replace(github.event.release.tag_name, 'v', '') }}
   DEVELOPER_HANDLE: ${{ github.repository_owner }}
   LOCAL_BUILD: false
 
 jobs:
-  build-and-push-amd64:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  # build-and-push-amd64:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
       
-      - name: Login to GitHub Container Registry
-        if: env.LOCAL_BUILD != 'true'
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ env.DEVELOPER_HANDLE }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login to GitHub Container Registry
+  #       if: env.LOCAL_BUILD != 'true'
+  #       uses: docker/login-action@v1
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ env.DEVELOPER_HANDLE }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push for amd64 platform
-        run: |
-          docker buildx build \
-            --push \
-            --platform linux/amd64 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
-            .
+  #     - name: Build and push for amd64 platform
+  #       run: |
+  #         docker buildx build \
+  #           --push \
+  #           --platform linux/amd64 \
+  #           --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
+  #           .
 
-  build-and-push-armv7:
+  build-and-push-all:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -58,45 +61,46 @@ jobs:
       - name: Set Swap Space
         uses: pierotofy/set-swap-space@v1.0
         with:
-          swap-size-gb: 10
+          swap-size-gb: 5
       - run: |
           # Workaround for https://github.com/rust-lang/cargo/issues/8719
           sudo mkdir -p /var/lib/docker
-          sudo mount -t tmpfs -o size=10G none /var/lib/docker
+          sudo mount -t tmpfs -o size=5G none /var/lib/docker
           sudo systemctl restart docker
 
-      - name: Build and push for armv7 platform
+      - name: Build and push for all platforms
         run: |
           docker buildx build \
             --push \
-            --platform linux/arm/v7 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:armv7-${{ env.APP_VERSION }} \
+            --platform linux/arm/v7,linux/amd64,linux/arm64/v8 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest \
             .
 
-  build-and-push-arm64v8:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  # build-and-push-arm64v8:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v1
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
       
-      - name: Login to GitHub Container Registry
-        if: env.LOCAL_BUILD != 'true'
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ env.DEVELOPER_HANDLE }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login to GitHub Container Registry
+  #       if: env.LOCAL_BUILD != 'true'
+  #       uses: docker/login-action@v1
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ env.DEVELOPER_HANDLE }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push for arm64v8 platform
-        run: |
-          docker buildx build \
-            --push \
-            --platform linux/arm64/v8 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} \
-            .
+  #     - name: Build and push for arm64v8 platform
+  #       run: |
+  #         docker buildx build \
+  #           --push \
+  #           --platform linux/arm64/v8 \
+  #           --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} \
+  #           .
