--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,32 +13,7 @@ env:
   LOCAL_BUILD: false
 
 jobs:
-  build-and-push-amd64:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      
-      - name: Login to GitHub Container Registry
-        if: env.LOCAL_BUILD != 'true'
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ env.DEVELOPER_HANDLE }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push for amd64 platform
-        run: |
-          docker buildx build \
-            --push \
-            --platform linux/amd64 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
-            .
-
-  build-and-push-armv7:
+  build-and-push-all-platforms:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -68,67 +43,24 @@ jobs:
           sudo mount -t tmpfs -o size=10G none /var/lib/docker
           sudo systemctl restart docker
 
-      - name: Build and push for all platforms
-        run: |
-          docker buildx build \
-            --push \
-            --platform linux/arm/v7,linux/amd64,linux/arm64/v8 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest \
-            .
-
-  build-and-push-arm64v8:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      
-      - name: Login to GitHub Container Registry
-        if: env.LOCAL_BUILD != 'true'
-        uses: docker/login-action@v1
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
         with:
-          registry: ghcr.io
-          username: ${{ env.DEVELOPER_HANDLE }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push for arm64v8 platform
-        run: |
-          docker buildx build \
-            --push \
-            --platform linux/arm64/v8 \
-            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }} \
-            .
-
-  build-and-push-manifest:
-    needs: [build-and-push-amd64, build-and-push-armv7, build-and-push-arm64v8]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      
-      - name: Login to GitHub Container Registry
-        if: env.LOCAL_BUILD != 'true'
-        uses: docker/login-action@v1
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          images: |
+            ghcr.io/${{ github.repository_owner }}/s5
+          flavor: |
+            latest=${{ startsWith(github.ref, 'refs/tags/') }}
+          tags: type=ref,event=tag
+      - name: Build and push
+        uses: docker/build-push-action@v4
         with:
-          registry: ghcr.io
-          username: ${{ env.DEVELOPER_HANDLE }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create manifest list and push to registry
-        run: |
-          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:armv7-${{ env.APP_VERSION }} \
-            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ env.APP_VERSION }}
-          docker manifest inspect ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
-          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ env.APP_VERSION }}
-          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest
+          context: .
+          platforms: linux/amd64, linux/arm64, linux/386, linux/arm/v7, linux/arm/v6
+          build-args: |
+            S5_DOCKER_TAG=${{ steps.meta.outputs.version }}
+          push: true
+          provenance: false
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
