--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -13,7 +13,46 @@ env:
   LOCAL_BUILD: false
 
 jobs:
-  build-and-push-all-platforms:
+  build-and-push-amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:v0.9.1
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          images: |
+            ghcr.io/${{ github.repository_owner }}/s5
+          flavor: |
+            latest=${{ startsWith(github.ref, 'refs/tags/') }}
+          tags: type=ref,event=tag
+      
+      - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ env.DEVELOPER_HANDLE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push for amd64 platform
+        run: |
+          docker buildx build \
+            --push \
+            --platform linux/amd64 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ steps.meta.outputs.version  }} \
+            .
+
+  build-and-push-armv7:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,6 +63,20 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:v0.9.1
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          images: |
+            ghcr.io/${{ github.repository_owner }}/s5
+          flavor: |
+            latest=${{ startsWith(github.ref, 'refs/tags/') }}
+          tags: type=ref,event=tag
       
       - name: Login to GitHub Container Registry
         if: env.LOCAL_BUILD != 'true'
@@ -43,6 +96,29 @@ jobs:
           sudo mount -t tmpfs -o size=10G none /var/lib/docker
           sudo systemctl restart docker
 
+      - name: Build and push for all platforms
+        run: |
+          docker buildx build \
+            --push \
+            --platform linux/arm/v7,linux/amd64,linux/arm64/v8 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ steps.meta.outputs.version }} \
+            .
+
+  build-and-push-arm64v8:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:v0.9.1
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -53,14 +129,61 @@ jobs:
           flavor: |
             latest=${{ startsWith(github.ref, 'refs/tags/') }}
           tags: type=ref,event=tag
-      - name: Build and push
-        uses: docker/build-push-action@v4
+      
+      - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
+        uses: docker/login-action@v1
         with:
-          context: .
-          platforms: linux/amd64, linux/arm64, linux/arm/v7
-          build-args: |
-            S5_DOCKER_TAG=${{ steps.meta.outputs.version }}
-          push: true
-          provenance: false
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          registry: ghcr.io
+          username: ${{ env.DEVELOPER_HANDLE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push for arm64v8 platform
+        run: |
+          docker buildx build \
+            --push \
+            --platform linux/arm64/v8 \
+            --tag ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ steps.meta.outputs.version }} \
+            .
+
+  build-and-push-manifest:
+    needs: [build-and-push-amd64, build-and-push-armv7, build-and-push-arm64v8]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:v0.9.1
+      
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          images: |
+            ghcr.io/${{ github.repository_owner }}/s5
+          flavor: |
+            latest=${{ startsWith(github.ref, 'refs/tags/') }}
+          tags: type=ref,event=tag
+      
+      - name: Login to GitHub Container Registry
+        if: env.LOCAL_BUILD != 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ env.DEVELOPER_HANDLE }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create manifest list and push to registry
+        run: |
+          docker manifest create ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ steps.meta.outputs.version }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:amd64-${{ steps.meta.outputs.version }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:armv7-${{ steps.meta.outputs.version }} \
+            ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:arm64-v8-${{ steps.meta.outputs.version }}
+          docker manifest inspect ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ steps.meta.outputs.version }}
+          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:${{ steps.meta.outputs.version }}
+          docker manifest push ghcr.io/${{ env.DEVELOPER_HANDLE }}/s5:latest
