get rid of extra backslash

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -154,7 +154,7 @@ jobs:
           docker manifest create ghcr.io/${{ github.repository_owner }}/s5:${{ needs.get_version.outputs.version  }} \
             ghcr.io/${{ github.repository_owner }}/s5:amd64-${{ needs.get_version.outputs.version  }} \
             ghcr.io/${{ github.repository_owner }}/s5:arm64-${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:armv7-${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/s5:armv7-${{ needs.get_version.outputs.version  }}
           docker manifest inspect ghcr.io/${{ github.repository_owner }}/s5:${{ needs.get_version.outputs.version  }}
           docker manifest push ghcr.io/${{ github.repository_owner }}/s5:${{ needs.get_version.outputs.version  }}
           docker manifest push ghcr.io/${{ github.repository_owner }}/s5:latest
