--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -51,7 +51,7 @@ jobs:
           docker buildx build \
             --push \
             --platform linux/amd64 \
-            --tag ghcr.io/${{ github.repository_owner }}/s5:amd64-${{ needs.get_version.outputs.version }} \
+            --tag ghcr.io/${{ github.repository_owner }}/node:amd64-${{ needs.get_version.outputs.version }} \
             .
 
   build-and-push-armv7:
@@ -93,7 +93,7 @@ jobs:
           docker buildx build \
             --push \
             --platform linux/arm/v7 \
-            --tag ghcr.io/${{ github.repository_owner }}/s5:armv7-${{ needs.get_version.outputs.version  }} \
+            --tag ghcr.io/${{ github.repository_owner }}/node:armv7-${{ needs.get_version.outputs.version  }} \
             .
 
   build-and-push-arm64:
@@ -125,7 +125,7 @@ jobs:
           docker buildx build \
             --push \
             --platform linux/arm64/v8 \
-            --tag ghcr.io/${{ github.repository_owner }}/s5:arm64-${{ needs.get_version.outputs.version  }} \
+            --tag ghcr.io/${{ github.repository_owner }}/node:arm64-${{ needs.get_version.outputs.version  }} \
             .
 
   build-and-push-manifest:
@@ -151,13 +151,13 @@ jobs:
 
       - name: Create manifest list and push to registry
         run: |
-          docker manifest create ghcr.io/${{ github.repository_owner }}/s5:${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:amd64-${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:arm64-${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:armv7-${{ needs.get_version.outputs.version  }}
-          docker manifest push ghcr.io/${{ github.repository_owner }}/s5:${{ needs.get_version.outputs.version  }}
-          docker manifest create ghcr.io/${{ github.repository_owner }}/s5:latest \
-            ghcr.io/${{ github.repository_owner }}/s5:amd64-${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:arm64-${{ needs.get_version.outputs.version  }} \
-            ghcr.io/${{ github.repository_owner }}/s5:armv7-${{ needs.get_version.outputs.version  }}
-          docker manifest push ghcr.io/${{ github.repository_owner }}/s5:latest
+          docker manifest create ghcr.io/${{ github.repository_owner }}/node:${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/node:amd64-${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/node:arm64-${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/node:armv7-${{ needs.get_version.outputs.version  }}
+          docker manifest push ghcr.io/${{ github.repository_owner }}/node:${{ needs.get_version.outputs.version  }}
+          docker manifest create ghcr.io/${{ github.repository_owner }}/node:latest \
+            ghcr.io/${{ github.repository_owner }}/node:amd64-${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/node:arm64-${{ needs.get_version.outputs.version  }} \
+            ghcr.io/${{ github.repository_owner }}/node:armv7-${{ needs.get_version.outputs.version  }}
+          docker manifest push ghcr.io/${{ github.repository_owner }}/node:latest
