--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
-  lib5: ^0.2.0
+  lib5:
+    git: https://github.com/s5-dev/lib5.git
   alfred:
     git: https://github.com/redsolver/alfred.git
   belatuk_range_header: ^6.0.0
