--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: s5_server
 description: Decentralized content-addressed storage network
 publish_to: none
-version: 0.14.1
+version: 1.0.0-pre.1
 
 environment:
   sdk: ^3.0.0
@@ -9,36 +9,39 @@ environment:
 dependencies:
   lib5:
     git: https://github.com/s5-dev/lib5.git
+  # TODO upgrade alfred to 1.1.3
   alfred:
     git: https://github.com/redsolver/alfred.git
-  belatuk_range_header: ^6.0.0
+  belatuk_range_header: ^6.4.0
   base_codecs: ^1.0.1
-  convert: ^3.0.2
-  http: ^1.0.0
+  convert: ^3.1.2
+  http: ^1.4.0
   minio:
     git: https://github.com/redsolver/minio-dart.git
-  path: ^1.8.2
+  path: ^1.9.1
   hive: ^2.2.3
-  toml: ^0.14.0
-  cryptography: ^2.0.5
-  mime: ^1.0.2
-  tint: ^2.0.0
+  toml: ^0.16.0
+  cryptography: ^2.7.0
+  mime: ^2.0.0
+  tint: ^2.0.1
+  # TODO migrate to proper_filesize or human_file_size
   filesize:
     git: https://github.com/redsolver/filesize.git
-  string_scanner: ^1.1.1
+  string_scanner: ^1.4.1
   pool: ^1.5.1
-  sqflite_common_ffi: ^2.2.0+1
+  sqflite_common_ffi: ^2.3.5
   ffi: ^2.0.1
-  flutter_rust_bridge: ^1.73.0
-  cancellation_token: ^2.0.0
+  flutter_rust_bridge: ^2.10.0
+  cancellation_token: ^2.0.1
+  http_parser: ^4.1.2
   # ! disabled because the arweave-dart library is licensed GPL-2.0 and this repo is MIT
   # arweave:
   #   git: https://github.com/ardriveapp/arweave-dart.git
 
 dependency_overrides:
-  http: 1.0.0
+  mime: 2.0.0
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
-  ffigen: ^8.0.2
+  lints: ^6.0.0
+  test: ^1.26.2
+  ffigen: ^19.0.0
